@@ -172,7 +172,6 @@ common.pagination.previous=Previo {0}
 common.pagination.results=Resultados por p\u00E1gina
 common.save=Salvar
 common.sectionedit=Editar
-common.sitename=JAMWiki
 common.topic=Tema
 common.undelete=Restaurar
 common.update=Actualizar
