@@ -172,7 +172,6 @@ common.pagination.previous=Prethodnih {0}
 common.pagination.results=Broj rezultata po stranici
 common.save=Spremi
 common.sectionedit=Uredi
-common.sitename=JAMWiki
 common.topic=Topik
 common.undelete=Poni\u0161ti brisanje
 common.update=A\u017Euriraj
