@@ -172,7 +172,6 @@ common.pagination.previous=El\u0151z\u0151 {0}
 common.pagination.results=Tal\u00E1latok oldalank\u00E9nt
 common.save=Ment\u00E9s
 common.sectionedit=Szerkeszt\u00E9s
-common.sitename=JAMWiki
 common.topic=Sz\u00F3cikk
 common.undelete=Helyre\u00E1ll\u00EDt\u00E1s
 common.update=Friss\u00EDt\u00E9s
