@@ -172,7 +172,6 @@ common.pagination.previous=Poprzednie {0}
 common.pagination.results=Liczba wynik\u00F3w na stronie
 common.save=Zapisz
 common.sectionedit=Edycja
-common.sitename=JAMWiki
 common.topic=Temat
 common.undelete=Przywr\u00F3\u0107 usuni\u0119ty plik
 common.update=Uaktualnienie
