@@ -172,7 +172,6 @@ common.pagination.previous=\u041F\u0440\u0435\u0434\u044B\u0434\u0443\u0449\u043
 common.pagination.results=\u0420\u0435\u0437\u0443\u043B\u044C\u0442\u0430\u0442\u043E\u0432 \u043D\u0430 \u0441\u0442\u0440\u0430\u043D\u0438\u0446\u0435
 common.save=\u0417\u0430\u043F\u0438\u0441\u044C
 common.sectionedit=\u0420\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u0442\u044C
-common.sitename=JAMWiki
 common.topic=\u0422\u0435\u043C\u0430
 common.undelete=\u0412\u043E\u0441\u0441\u0442\u0430\u043D\u043E\u0432\u0438\u0442\u044C
 common.update=\u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C
