@@ -172,7 +172,6 @@ common.pagination.previous=F\u00F6reg\u00E5ende {0}
 common.pagination.results=Results per page
 common.save=Spara
 common.sectionedit=Edit
-common.sitename=JAMWiki
 common.topic=\u00C4mna
 common.undelete=Un-Delete
 common.update=Update
